props drilling, state and props only

--- a/react-overview/src/components/Header/styles.module.sass
+++ b/react-overview/src/components/Header/styles.module.sass
@@ -1,5 +1,8 @@
-.home
+.header
   border: 2px solid blue
   margin: 20px
-  height: 100px
+  height: 70px
+
+.header__form, .header__formButton
+  margin-top: 10px
 
