--- a/react-overview/src/pages/Home/styles.module.sass
+++ b/react-overview/src/pages/Home/styles.module.sass
@@ -1,5 +1,13 @@
 .home
+  height: 700px
+
+.home__section, .home
   border: 2px solid blue
   margin: 20px
-  height: 500px
 
+.home__section
+  height: 55%
+  text-align: start
+
+.home__username
+  text-align: center
